# wrec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  install.ps1
.cursor/rules/: build-verify.mdc  codegraph.mdc
.github/workflows/: build.yml  release.yml
bucket/: wrec.json
docs/: architecture.md  build.md  cli.md  guide.md
packaging/winget/Mew.Wrec/: Mew.Wrec.installer.yaml  Mew.Wrec.locale.en-US.yaml  Mew.Wrec.yaml
packaging/winget/manifests/m/Mew/Wrec/0.1.11/: Mew.Wrec.installer.yaml  Mew.Wrec.locale.en-US.yaml  Mew.Wrec.yaml
packaging/winget/manifests/m/Mew/Wrec/0.1.7/: Mew.Wrec.installer.yaml  Mew.Wrec.locale.en-US.yaml  Mew.Wrec.yaml
packaging/winget/manifests/m/Mew/Wrec/0.1.8/: Mew.Wrec.installer.yaml  Mew.Wrec.locale.en-US.yaml  Mew.Wrec.yaml
scripts/: open-terminal-here.bat  release-packaging.ps1
src/: capture_wgc.cpp  capture_wgc.h  cli.cpp  cli.h  cursor_overlay.cpp  cursor_overlay.h  d3d_device.cpp  d3d_device.h  gui.cpp  hotkeys.cpp  hotkeys.h  logging.cpp  logging.h  main.cpp  mf_encoder.h  record_options.cpp  record_options.h  recorder.cpp  recorder.h  result.h  window_list.cpp  window_list.h
src/app/: cli.cpp  cli.h  gui.cpp  gui.h  path_install.cpp  path_install.h  record_options.cpp  record_options.h  record_preset.h
src/capture/: capture_perf.h  capture_printwindow.cpp  capture_printwindow.h  capture_source.cpp  capture_source.h  cursor_overlay.cpp  cursor_overlay.h  d3d_device.cpp  d3d_device.h  source_frame.h  window_info.h  window_list.cpp  window_list.h
src/core/: logging.cpp  logging.h  notification.cpp  notification.h
src/record/: frame_synchronizer.cpp  frame_synchronizer.h  hotkeys.cpp  hotkeys.h  mf_encoder.cpp  mf_encoder.h  post_compress.cpp  post_compress.h  recorder.cpp  recorder.h  recorder_manager.cpp  recorder_manager.h
src/res/: resource.h  wrec.rc
src/scene/: compositor.cpp  compositor.h  scene.cpp  scene.h
